完成 Train 與 CollectionFactory 修改